# libfuzzer

./: .gitignore  CMakeLists.txt  LLVM_HASH  README.md  TODO
.github/workflows/: build.yml  pypi.yml
bindings/python/: example.py  setup.py
bindings/python/libfuzzer/: __init__.py  libfuzzer.py
bindings/python/libfuzzer/include/: LibFuzzer.h
compiler-rt/lib/fuzzer/: FuzzerDefs.h  FuzzerDriver.cpp
example/: main.c
include/: LibFuzzer.h
llvm/compiler-rt/lib/fuzzer/: FuzzerDriver.cpp  FuzzerExtraCounters.cpp
